# otenki-live

./: .gitignore  README.md  workspaces.code-workspace
.github/workflows/: main.yml
backend/: .gitignore  README.md  pyproject.toml
backend/app/: batch_main.py  pyproject.toml
backend/app/adapter/api/: exceptions.py  main.py
backend/app/adapter/api/v1/: weathers.py
backend/app/adapter/api/v1/endpoints/: area.py  contact.py  forecast.py  live_channel.py
backend/app/adapter/api/v1/schemas/: area.py  base.py  contact.py  forecast.py  live_channel.py
backend/app/adapter/handler/: live_object_detection.py  queue_live_streams.py  weather_forecast.py
backend/app/batch/weather_forecast/: update_forecast.py
backend/app/core/: aws_security_credentials_supplier.py  object_category_mapping.py  settings.py  utils.py
backend/app/core/di/: container.py
backend/app/core/translations/: messages.py  translation.py
backend/app/domain/: pynamodb_model.py
backend/app/domain/entities/forecast_area/: entity.py
backend/app/domain/entities/forecast_telop/: entity.py
backend/app/domain/entities/jma_forecast/: entity.py
backend/app/domain/entities/jma_hourly_forecast/: entity.py
backend/app/domain/entities/live_channel/: entity.py
backend/app/domain/entities/live_detect_data/: detect_object.py  entity.py
backend/app/domain/entities/mail_template/: entity.py  mail_template_type.py
backend/app/domain/jma_forecast/: model.py  pop_data.py  temp_data.py  weather_data.py
backend/app/domain/repositories/: captcha_repository.py  jma_repository.py  live_channel_repository.py  live_detect_repository.py  live_stream_repository.py  ses_repository.py  sqs_repository.py  storage_repository.py  weather_forecast_repository.py
backend/app/domain/services/: object_detection_service.py
backend/app/domain/weather_forecast/: forecast_data.py  model.py
backend/app/infrastructure/: exceptions.py
backend/app/infrastructure/dto/dynamodb/: pynamodb_model.py
backend/app/infrastructure/dto/dynamodb/live_channel/: active_index.py  area_index.py  live_channel_status.py  model.py  status_index.py
backend/app/infrastructure/dto/dynamodb/live_detect_data/: model.py
backend/app/infrastructure/dto/dynamodb/weather_forecast/: forecast_data.py  forecast_pop_data.py  model.py
backend/app/infrastructure/dto/dynamodb/weather_hourly_forecast/: model.py  report_date_index.py
backend/app/infrastructure/dto/sqs/: live_stream_payload.py
backend/app/infrastructure/mappers/: live_channel_mapper.py  live_detect_data_mapper.py  weather_forecast_mapper.py  weather_hourly_forecast_mapper.py
backend/app/infrastructure/repositories/: captcha_repository.py  jma_repository.py  live_channel_repository.py  live_detect_repository.py  live_stream_repository.py  ses_repository.py  sqs_repository.py  storage_repository.py  weather_forecast_repository.py
backend/app/infrastructure/repositories/jma/: repository.py
backend/app/infrastructure/repositories/weather_forecast/: mock_repository.py  repository.py
backend/app/infrastructure/seed/: forecast_area.yaml  forecast_telop.yaml  live_channel.yaml  mail_template.yaml
backend/app/usecases/: exceptions.py
backend/app/usecases/area/: list_area_interactor.py
backend/app/usecases/contact/: contact_interactor.py
backend/app/usecases/jma/: repository.py
backend/app/usecases/live_channel/: active_live_channel_interactor.py  check_live_streams_interactor.py  object_detection_interactor.py
backend/app/usecases/services/: weather_forecast_service.py
backend/app/usecases/weather_forecast/: detailed_forecast_interactor.py  interactor.py  prefecture_forecast_interactor.py  regional_forecast_interactor.py  repository.py  update_forecast_interactor.py
backend/docker/: docker-compose.yml
backend/tests/: conftest.py
backend/tests/api/: test_contact.py  test_contact_endpoint.py  test_forecast_endpoint.py  test_live_channel.py  test_live_channel_endpoint.py
backend/tests/units/: jma_repository.py  settings.py  test_settings.py
backend/tests/units/repositories/: test_captcha_repository.py  test_jma_repository.py  test_live_channel_repository.py  test_live_detect_repository.py  test_live_stream_repository.py  test_ses_repository.py  test_sqs_repository.py  test_storage_repository.py  test_weather_forecast_repository.py
backend/tests/usecases/: test_active_live_channel.py  test_check_live_streams.py  test_contact.py  test_list_area.py  test_object_detection.py  test_regional_forecast.py  test_update_forecast.py  weather_forecast.py
docs/: database.pu  flow.pu  infra.drawio  plan.md  plan.pu  server.drawio
frontend/: .eslintrc.json  .prettierrc  README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
frontend/app/[region]/: page.tsx
frontend/app/about/: page.tsx
frontend/app/contact/: page.tsx
frontend/app/credits/: page.tsx
frontend/app/og/: route.tsx
frontend/components/: breadcrumb-nav.tsx  footer.tsx  header.tsx  theme-switch.tsx
frontend/components/ui/: breadcrumb.tsx  card.tsx  dialog.tsx  form.tsx  toggle.tsx  tooltip.tsx
frontend/lib/: api.ts  constants.ts  env.ts  exceptions.ts  logger.ts  utils.ts
frontend/mocks/: handlers.ts  msw-provider.tsx
frontend/mocks/handlers/: contact.ts  daily-forecast.json  forecast-area.json  forecast.ts  hourly-forecast.json  live-channel.json  object-detection-data.json  prefecture-forecast.json  regional-forecast.json
frontend/scripts/: resize-images.ts
frontend/styles/: globals.css
frontend/tests/: home.spec.ts  integration.spec.ts  prefecture.spec.ts  region.spec.ts
frontend/types/: api.ts  weather.ts
infrastructure/: .gitignore
infrastructure/docker/: docker-compose.yml
infrastructure/docker/backend/: .dockerignore  Dockerfile
infrastructure/docker/ci/: Dockerfile
infrastructure/docker/ffmpeg/: Dockerfile
infrastructure/shell/: build_backend.sh
(+62 files in other folders)
