[project]
name = "OtenkiLive"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.10",
    "dependency-injector>=4.46.0",
    "fastapi[all]>=0.115.12",
    "pynamodb>=6.0.2",
    "requests>=2.32.3",
    "typer>=0.15.3",
]

[dependency-groups]
dev = [
    "boto3-stubs[dynamodb]>=1.38.10",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
    "types-requests>=2.32.0.20250328",
]

[tool.pytest.ini_options]
pythonpath = "app"
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning:botocore.*"]

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "B904",  # raise ... from ... になっていない場合のエラーを無視
]

[tool.ruff.lint.per-file-ignores]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]
