[project]
name = "OtenkiLive"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.10",
    "dependency-injector>=4.46.0",
    "fastapi[all]>=0.115.12",
    "ffmpeg-python>=0.2.0",
    "loguru>=0.7.3",
    "pynamodb>=6.0.2",
    "requests>=2.32.3",
    "typer>=0.15.3",
    "yt-dlp>=2025.4.30",
    "aws-lambda-typing>=2.20.0",
    "types-requests>=2.32.0.20250328",
    "pyyaml>=6.0.2",
    "types-pyyaml>=6.0.12.20250516",
    "boto3-stubs[dynamodb,sqs]>=1.38.10",
    "mypy-boto3-sqs>=1.38.0",
]

[dependency-groups]
dev = [
    "boto3-stubs-custom",
    "moto>=5.1.4",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = "app"
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning:botocore.*"]

[tool.mypy]
plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = ['yt_dlp', 'ffmpeg']
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "B904",  # raise ... from ... になっていない場合のエラーを無視
]

[tool.ruff.lint.per-file-ignores]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.uv.sources]
boto3-stubs-custom = { path = "vendored/boto3_stubs_custom-1.38.22-py3-none-any.whl" }
